crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__error_offset_in_main_tier@Direct.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(main, error_vec)"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 506,
                                    end: 508,
                                },
                                word_id: None,
                                raw_text: "xx",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "xx",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: None,
            },
            span: Span {
                start: 500,
                end: 510,
            },
            speaker_span: Span {
                start: 501,
                end: 504,
            },
        },
    ),
    [],
)
