crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__error_offset_in_word@Direct.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(word, error_vec)"
---
(
    Some(
        Word {
            span: Span {
                start: 100,
                end: 102,
            },
            word_id: None,
            raw_text: "xx",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "xx",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
