crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__multiple_fragments_different_offsets@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: results
---
[
    (
        "hello",
        0,
        Some(
            Word {
                span: Span {
                    start: 0,
                    end: 0,
                },
                word_id: None,
                raw_text: "hello",
                content: WordContents(
                    [
                        Text(
                            WordText(
                                NonEmptyString(
                                    "hello",
                                ),
                            ),
                        ),
                    ],
                ),
                category: None,
                form_type: None,
                lang: None,
                part_of_speech: None,
                inline_bullet: None,
                cached_cleaned_text: CachedStr(
                    OnceLock(
                        <uninit>,
                    ),
                ),
            },
        ),
        [],
    ),
    (
        "world",
        100,
        Some(
            Word {
                span: Span {
                    start: 0,
                    end: 0,
                },
                word_id: None,
                raw_text: "world",
                content: WordContents(
                    [
                        Text(
                            WordText(
                                NonEmptyString(
                                    "world",
                                ),
                            ),
                        ),
                    ],
                ),
                category: None,
                form_type: None,
                lang: None,
                part_of_speech: None,
                inline_bullet: None,
                cached_cleaned_text: CachedStr(
                    OnceLock(
                        <uninit>,
                    ),
                ),
            },
        ),
        [],
    ),
    (
        "foo",
        200,
        Some(
            Word {
                span: Span {
                    start: 93,
                    end: 96,
                },
                word_id: None,
                raw_text: "foo",
                content: WordContents(
                    [
                        Text(
                            WordText(
                                NonEmptyString(
                                    "foo",
                                ),
                            ),
                        ),
                    ],
                ),
                category: None,
                form_type: None,
                lang: None,
                part_of_speech: None,
                inline_bullet: None,
                cached_cleaned_text: CachedStr(
                    OnceLock(
                        <uninit>,
                    ),
                ),
            },
        ),
        [],
    ),
    (
        "bar",
        300,
        Some(
            Word {
                span: Span {
                    start: 193,
                    end: 196,
                },
                word_id: None,
                raw_text: "bar",
                content: WordContents(
                    [
                        Text(
                            WordText(
                                NonEmptyString(
                                    "bar",
                                ),
                            ),
                        ),
                    ],
                ),
                category: None,
                form_type: None,
                lang: None,
                part_of_speech: None,
                inline_bullet: None,
                cached_cleaned_text: CachedStr(
                    OnceLock(
                        <uninit>,
                    ),
                ),
            },
        ),
        [],
    ),
]
