crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__offset_with_chinese_characters@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(input.len(), word, errors.into_vec())"
---
(
    6,
    Some(
        Word {
            span: Span {
                start: 393,
                end: 399,
            },
            word_id: None,
            raw_text: "你好",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "你好",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
