crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__offset_with_multibyte_utf8@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(input.len(), word, errors.into_vec())"
---
(
    14,
    Some(
        Word {
            span: Span {
                start: 893,
                end: 907,
            },
            word_id: None,
            raw_text: "hello😊world",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello😊world",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
